Fix header alignment

--- a/src/style/sponsor.scss
+++ b/src/style/sponsor.scss
@@ -17,20 +17,20 @@ $sponsor-color-table-category: $color-hack-black-70;
     margin: 0 auto;
     position: relative;
     &__foreground {
-      position: absolute;
       z-index: 2;
-      display: flex;
-      top: 20%;
-      left: 5%;
-      align-items: center;
-      justify-content: center;
+      margin-top: 4rem;
+      text-align: center;
 
       @include media-query($sm-up) {
-        justify-content: flex-start;
+        position: absolute;
+        top: 10%;
+        left: 10%;
       }
     }
 
     &__background {
+      width: 80%;
+      margin-left: 10%;
       max-width: 128rem;
       pointer-events: none;
       user-select: none;
@@ -38,11 +38,7 @@ $sponsor-color-table-category: $color-hack-black-70;
 
     &__heading {
       color: $sponsor-color-primary;
-      font-size: 3rem;
-
-      @include media-query($sm-up) {
-        font-size: 4.8rem;
-      }
+      font-size: 4.8rem;
 
       @include media-query($md-up) {
         font-size: 6.4rem;
